add some cool things

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 🌊 SWAM Project - Cross-Language Code Analysis System
+# SWAM Project - Cross-Language Code Analysis System
 # Gitignore ottimizzato per struttura pulita v4.0 (Post-cleanup)
 
 # =============================================================================
