Add CSV results and update gitignore to include benchmark data
- Include results/csv/ and results/carbon/ CSV files
- Updated .gitignore to track important benchmark results
- CSV files contain: benchmark summaries, task analysis, CO2 emissions data

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 
 # Directory risultati completa (esclusa dal versioning)
 results/
+# Ma include i CSV dei benchmark (dati importanti)
+!results/csv/
+!results/csv/*.csv
+!results/carbon/
+!results/carbon/*.csv
 
 # File di log e tracciamento
 *.log
