--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,22 @@
-# CLAP – Cross-Language Analysis Project
-# requirements.txt file for installation via pip
+# CLAP Project - Python Dependencies
+# Versioni installate nell'ambiente CLAP (aggiornato: 2025-10-15)
 
-# Dataset and Machine Learning
-datasets>=2.14.0
-huggingface-hub>=0.16.0
+# Core Dependencies - Richieste per funzionamento base
+codecarbon==3.0.1          # Tracciamento CO2 e consumo energetico
+datasets==4.0.0            # Gestione dataset multi-formato
+pandas==2.3.1              # Analisi dati e statistiche
+numpy==2.3.2               # Calcoli numerici e array
+tqdm==4.67.1               # Progress bars per operazioni lunghe
+colorama==0.4.6            # Output colorato terminale
+psutil==7.0.0              # Informazioni sistema e processi
+pyarrow==21.0.0            # Performance I/O per file grandi
 
-# Data Processing
-pandas>=2.0.0
-numpy>=1.24.0
+# Additional Dependencies (già installate nell'ambiente CLAP)
+fastapi==0.112.2           # API framework
+httpx==0.27.0              # HTTP client avanzato
+click==8.2.1               # CLI framework
+cryptography==45.0.5       # Sicurezza e crittografia
 
-# Progress bars and UI
-tqdm>=4.65.0
-colorama>=0.4.6
-
-# System utilities
-psutil>=5.9.0
-
-# Carbon footprint tracking (NEW!)
-codecarbon>=3.0.0
-
-# Statistics for CO2 benchmarking (built-in Python)
-# statistics (built-in)
-# datetime (built-in)
-# re (built-in)
-
-# Optional: to improve performance
-pyarrow>=12.0.0
-
-# Development and debugging (optional)
-# ipython>=8.12.0
-# jupyter>=1.0.0
+# Optional (da installare se necessario)
+# matplotlib>=3.7.0        # Visualizzazioni grafiche
+# tabulate>=0.9.0          # Formattazione tabelle eleganti
